--- a/Script_notebook/LabTAT.ipynb
+++ b/Script_notebook/LabTAT.ipynb
@@ -310,7 +310,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Hence We Fail to Reject Null hypothesis because of Lack of evidence, so there is no significant Difference between the samples**"
+        "**As we can see p-value is approximately equal to 0 which is less than α = 0.05 ; Reject Null hypothesis H0 ; Hence there is difference in average TAT among the different laboratories**"
       ],
       "metadata": {
         "id": "Otzk1fbvIHMv"
