--- a/Script_notebook/LabTAT.ipynb
+++ b/Script_notebook/LabTAT.ipynb
@@ -299,7 +299,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# As we can See p_value is 2.11 > 0.05 "
+        "# As we can See p_value is 0 < 0.05 "
       ],
       "metadata": {
         "id": "8Y2M-w76F3DH"
