--- a/Script_notebook/CustomerOrderForm.ipynb
+++ b/Script_notebook/CustomerOrderForm.ipynb
@@ -473,7 +473,7 @@
       "source": [
         "**P-value is 0.277 > 0.05=>P high Ho  => Accept Ho**\n",
         "\n",
-        "**Hence Proportion of male vs female in weekdays is equal to Proportion of male vs female in weekends**"
+        "**As we can see p-value is greater than α = 0.05 ; Accept Null hypothesis H0 ; Hence we can say that the defective % does not varies by centre**"
       ],
       "metadata": {
         "id": "7YISSqGQiLOB"
