--- a/Script_notebook/CustomerOrderForm.ipynb
+++ b/Script_notebook/CustomerOrderForm.ipynb
@@ -471,7 +471,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**P-value is 0.277 > 0.05=>P high Ho  => Accept Ho**\n",
+        "**P-value is 0.277 > 0.05 ; Accept Ho**\n",
         "\n",
         "**As we can see p-value is greater than α = 0.05 ; Accept Null hypothesis H0 ; Hence we can say that the defective % does not varies by centre**"
       ],
